src/github.com/ebay/beam/query/parser/testdata/insert/errors/unused_var.res
parser: variable ?var captured but not used